# mdm

./: README.md  bregman.py  evaluate_samples.py  generate_samples.py  interpolant.py  pyproject.toml  sampling.py  schedule.py  train.py
config/bracket/: any_order.yaml  mdm.yaml  semi_auto.yaml
config/openwebtext/: any_order_small.yaml  mdm.yaml
config/wikitext2/: any_order.yaml  autoregressive.yaml  mdm.yaml
data/: __init__.py  gsm8k.py  parenthesis.py  text.py
lightning_modules/: __init__.py  any_order.py  autoregressive.py  mdm.py
model/: MDM_transformer.py  casual_transformer.py  fused_add_dropout_scale.py  rotary.py  transformer.py
notebook/: sample_anyorder_bracket.ipynb  sample_semiauto_bracket.ipynb  test_interpolant.ipynb  test_text.ipynb
scaling_flexmdm/: .gitignore  README.md  env.yml  eval_gsm8k.py  eval_humaneval_infill.py  flexmdm_inference.py  flexmdm_interpolant.py  flexmdm_trainer.py  flexmdm_transfer_openwebtext.py  flexmdm_transfer_preprocess.py  instruction_finetuning.py  llada_dit.py  llada_inference.py  llada_trainer.py  llada_utils.py  preprocess_code_infilling.py  preprocess_math.py
scaling_flexmdm/eval_gsm8k/: parse_and_get_acc.py  parser_helper.py
scaling_flexmdm/scripts/: IFT_code.sh  IFT_math.sh  flexmdm_transfer.sh  flexmdm_transfer_preprocess.sh  inference_code.sh  (+1 more)
scripts/: eval_genppl.sh  eval_len_stats.sh  evaluate_samples_only.sh  generate_samples.sh  generate_samples_single.sh  mdm.sh  prepare_data.py  prepare_data_openwebtext.py  prepare_dataset.sh  vlmdm_geo.sh  vlmdm_linear.sh  wikitext2_any_order.sbatch
(+4 files in other folders)
